hphp/test/zend/good/ext/hash/tests/hash_file_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
extension_loaded('hash') || die('skip: hash extension not loaded.');
}
